--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             }
         }
     </style>
-    <!-- Import map unifié : Force une seule instance de React pour tous les modules -->
+    <!-- Import map unifié : Supprime les doublons et force une seule instance de React -->
     <script type="importmap">
 {
   "imports": {
