feat: Update React to v19 and optimize DB instance
Updates the React version to 19.0.0 in the import map for improved performance and feature access.

Refactors the Dexie database initialization to remove redundant comments and ensure a single, consistent instance of the `IbraProDatabase` is utilized across the application. This simplifies database management and promotes efficient resource usage.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             }
         }
     </style>
-    <!-- Import map unifié : Supprime les doublons et force une seule instance de React -->
+    <!-- Import map unifié : Force une seule instance de React 19.0.0 -->
     <script type="importmap">
 {
   "imports": {
