--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#2557a7">
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>IbraPro | Gestion Garage</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -59,6 +59,7 @@
             }
         }
     </style>
+    <!-- Import map unifié : Force une seule instance de React 19.0.0 pour tout le projet -->
     <script type="importmap">
 {
   "imports": {
@@ -76,9 +77,11 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
     <script type="module" src="index.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
